--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,12 @@ export(vos_start)
 export(write_nquads)
 importFrom(DBI,dbConnect)
 importFrom(dplyr,left_join)
+importFrom(ini,read.ini)
+importFrom(ini,write.ini)
 importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
+importFrom(rappdirs,user_log_dir)
 importFrom(tidyr,gather)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
