export server controls, update README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(vos_clear_graph)
 export(vos_connect)
 export(vos_import)
 export(vos_install)
+export(vos_kill)
+export(vos_process)
 export(vos_query)
 export(vos_start)
+export(vos_status)
 export(write_nquads)
 importFrom(DBI,dbConnect)
 importFrom(dplyr,left_join)
