--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
 importFrom(rappdirs,user_log_dir)
+importFrom(stringi,stri_split_fixed)
 importFrom(tidyr,gather)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
