--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
 importFrom(rappdirs,user_log_dir)
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stringi,stri_split_fixed)
 importFrom(tidyr,gather)
 importFrom(utils,read.table)
