Proof of principle for a dplyr-esque DSL (#7)
* attempt appveyor ... here goes nothin'

* Some experimental methods

* add jsonlite

let vos_start customize wait time

* update docs

* stringi

* update docs

* candidate for DSL

* tidy up docs a bit

* update docs

* DSL proof of principle

* some testing

* tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,12 +22,17 @@ Imports:
     dplyr,
     tidyr,
     ini,
-    rappdirs
+    rappdirs,
+    jsonlite,
+    stringi,
+    stats,
+    rlang
 RoxygenNote: 6.1.0
 Suggests: 
     knitr,
     rmarkdown,
     nycflights13,
     testthat,
-    covr
+    covr,
+    jsonld
 VignetteBuilder: knitr
