--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Suggests:
     testthat,
     covr,
     jsonld,
-    rdftools
+    rdftools,
+    dplyr
 VignetteBuilder: knitr
 Remotes: cboettig/rdftools
