hello appveyor, try dotnet install of virtuoso

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ cache:
 # Adapt as necessary starting from here
 
 build_script:
+  - dotnet add package OpenLink.Data.Virtuoso --version 7.20.3214.1
   - travis-tool.sh install_deps
 
 test_script:
