--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,14 @@
 
 # Download script file from GitHub
 init:
-  ps: |
+  - ps: |
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
+        Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe/download   -OutFile "..\irtuoso_OpenSource_Server_7.20.x64.exe"
+        $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe -PassThru
+        
+        
 
 install:
   - ps: Bootstrap
