--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,8 @@ init:
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
-        Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe/download   -OutFile "..\irtuoso_OpenSource_Server_7.20.x64.exe"
-        $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe -PassThru
+  - ps: Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe/download   -OutFile "..\Virtuoso_OpenSource_Server_7.20.x64.exe"
+  - ps: $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe -PassThru
         
         
 
