--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,9 @@ init:
 
 install:
   - ps: Bootstrap
-  - ps: Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe -OutFile "..\Virtuoso_OpenSource_Server_7.20.x64.exe"
-  - ps: $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe -PassThru
+  - ps: | 
+        Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe -OutFile "..\Virtuoso_OpenSource_Server_7.20.x64.exe"
+        $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe -PassThru
 
 
 cache:
