--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,10 @@ init:
 
 install:
   - ps: Bootstrap
-  - ps: | 
-        Invoke-WebRequest https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe -OutFile "..\Virtuoso_OpenSource_Server_7.20.x64.exe"
-        $MyProcess = Start-Process '..\Virtuoso_OpenSource_Server_7.20.x64.exe' -PassThru
+  - ps: |
+        "C:\Program Files\Git\mingw64\bin\curl.exe" -s -o Virtuoso_OpenSource_Server_7.20.x64.exe -L https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe/download
+        Invoke-WebRequest 
+        $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe
 
 
 cache:
