--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,7 @@ install:
   - ps: Bootstrap
   - ps: |
         "C:\Program Files\Git\mingw64\bin\curl.exe" -s -o Virtuoso_OpenSource_Server_7.20.x64.exe -L https://sourceforge.net/projects/virtuoso/files/virtuoso/7.2.5/Virtuoso_OpenSource_Server_7.20.x64.exe/download
-        Invoke-WebRequest 
-        $MyProcess = Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe
+        Start-Process Virtuoso_OpenSource_Server_7.20.x64.exe
 
 
 cache:
