expose separate log function
build docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(vos_import)
 export(vos_install)
 export(vos_kill)
 export(vos_list_graphs)
+export(vos_log)
 export(vos_process)
 export(vos_query)
 export(vos_start)
