passing full check / test suite on Windows!
now to see if we can get an unsupervised installer to run...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(vos_query)
 export(vos_start)
 export(vos_status)
 importFrom(DBI,dbConnect)
+importFrom(curl,curl_download)
 importFrom(ini,read.ini)
 importFrom(ini,write.ini)
 importFrom(odbc,odbc)
