Okay AppVeyor, try this...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(vos_process)
 export(vos_query)
 export(vos_start)
 export(vos_status)
+export(vos_uninstall_windows)
 importFrom(DBI,dbConnect)
 importFrom(curl,curl_download)
 importFrom(ini,read.ini)
