import utils::askYesNo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,4 +21,5 @@ importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
 importFrom(rappdirs,user_log_dir)
+importFrom(utils,askYesNo)
 importFrom(utils,read.table)
