--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(vos_install)
 export(vos_kill)
 export(vos_list_graphs)
 export(vos_log)
+export(vos_odbcinst)
 export(vos_process)
 export(vos_query)
 export(vos_start)
@@ -20,6 +21,7 @@ importFrom(ini,write.ini)
 importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
+importFrom(rappdirs,user_config_dir)
 importFrom(rappdirs,user_log_dir)
 importFrom(utils,askYesNo)
 importFrom(utils,read.table)
