update docs.  check using "~/.odbcinst" again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ importFrom(ini,write.ini)
 importFrom(odbc,odbc)
 importFrom(processx,process)
 importFrom(processx,run)
-importFrom(rappdirs,user_config_dir)
-importFrom(rappdirs,user_log_dir)
+importFrom(rappdirs,app_dir)
 importFrom(utils,askYesNo)
 importFrom(utils,read.table)
