--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(vos_status)
 export(vos_uninstall)
 importFrom(DBI,dbConnect)
 importFrom(curl,curl_download)
+importFrom(fs,path_tidy)
 importFrom(ini,read.ini)
 importFrom(ini,write.ini)
 importFrom(odbc,odbc)
