import via cache dir

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(vos_clear_graph)
 export(vos_configure)
 export(vos_connect)
+export(vos_delete_db)
 export(vos_import)
 export(vos_install)
 export(vos_kill)
@@ -16,6 +17,7 @@ export(vos_status)
 export(vos_uninstall)
 importFrom(DBI,dbConnect)
 importFrom(curl,curl_download)
+importFrom(digest,digest)
 importFrom(fs,path_tidy)
 importFrom(ini,read.ini)
 importFrom(ini,write.ini)
