--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(vos_uninstall)
 importFrom(DBI,dbConnect)
 importFrom(curl,curl_download)
 importFrom(digest,digest)
+importFrom(fs,path_abs)
 importFrom(fs,path_tidy)
 importFrom(ini,read.ini)
 importFrom(ini,write.ini)
