spelling & updated documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,8 @@ Suggests:
     covr,
     jsonld,
     rdftools,
-    dplyr
+    dplyr,
+    spelling
 VignetteBuilder: knitr
 Remotes: cboettig/rdftools
+Language: en-US
