--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(DBI,dbConnect)
 importFrom(curl,curl_download)
 importFrom(digest,digest)
 importFrom(fs,path_abs)
+importFrom(fs,path_norm)
 importFrom(fs,path_tidy)
 importFrom(ini,read.ini)
 importFrom(ini,write.ini)
