Edits addressing rOpenSci peer review (#25)
* edits for rOpenSci review (closes #26)
* use ps functions directly to control virtuoso process (#24) (closes #23)
* enable a fallback url for downloading
* run styler::style_pkg()
* update vignette

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,4 @@
+^codemeta\.json$
 ^\.github$
 ^CODE_OF_CONDUCT\.md$
 ^appveyor\.yml$
@@ -11,3 +12,7 @@
 ^\.Rproj\.user$
 ^vignettes/articles$
 ^pkgdown$
+.*-review.md
+\*.nq$
+.*\.dmg$
+.*\.exe$
