--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: virtuoso
 Type: Package
-Title: An R interface to Virtuoso using ODBC
+Title: Interface to Virtuoso using ODBC
 Version: 0.1.2
 Authors@R: c(person("Carl", "Boettiger", 
                   email = "cboettig@gmail.com", 
@@ -10,22 +10,29 @@ Authors@R: c(person("Carl", "Boettiger",
                     role = "ctb", 
                     email = "brycemecum@gmail.com",
                     comment = c(ORCID = "0000-0002-0381-3766")))
-Description: Virtuoso is a high-performance "universal server," which can act
-             as both a relational database (supporting standard SQL queries),
-             and an Resource Description Framework (RDF) triplestore, supporting 
-             SPARQL queries and semantic reasoning. The virtuoso R package provides
-             R users with a DBI-compatible connection to the Virtuoso database. 
+Description: Database interface to the 'Virtuoso' server. 'Virtuoso' is a 
+             high-performance "universal server," which can act
+             as both a relational database, supporting standard Struqtured Query 
+             Language (SQL) queries, while also supporting data following the
+             Resource Description Framework (RDF) model for Linked Data.
+             RDF data can be queried using SPARQL (SPARQL Protocol and RDF Query Language)
+             queries, a graph-based query that supports semantic reasoning. 
+             The 'virtuoso' R package provides users with a simple and convenient
+             mechanism to manage and query a 'Virtuoso' database using the DBI (DataBase Interface)
+             compatible ODBC (Open Database Connectivity) interface. This allows users
+             to leverage the performance of local or remote 'Virtuoso' servers using
+             popular R packages such as 'DBI' and 'dplyr', while also providing a 
+             high-performance solution for working with large RDF triplestores from R.
              The package also provides helper routines to install, launch, and manage
-             a Virtuoso server locally on Mac, Windows and Linux platforms using
+             a 'Virtuoso' server locally on Mac, Windows and Linux platforms using
              the standard interactive installers from the R command-line.  By 
-             automatically handling these setup steps, the package can make Virtuoso
+             automatically handling these setup steps, the package can make using 'Virtuoso'
              considerably faster and easier for a most users to deploy in a local
-             environment. While this can be used as a normal dplyr backend, Virtuoso 
-             excels when used as a RDF triplestore.  Managing the bulk import of triples
+             environment. Managing the bulk import of triples
              from common serializations with a single intuitive command is another key
-             feature of the virtuoso R package.  Bulk import performance can be tens to
+             feature of the 'virtuoso' R package.  Bulk import performance can be tens to
              hundreds of times faster than the comparable imports using existing R tools,
-             including rdflib and redland packages.  
+             including 'rdflib' and 'redland' packages.  
 License: MIT + file LICENSE
 URL: https://github.com/ropensci/virtuoso
 BugReports: https://github.com/ropensci/virtuoso/issues
