--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Description: Provides users with a simple and convenient
              hundreds of times faster than the comparable imports using existing 'R' tools,
              including 'rdflib' and 'redland' packages.  
 License: MIT + file LICENSE
-URL: https://github.com/ropensci/virtuoso
+URL: https://github.com/ropensci/virtuoso (devel), https://docs.ropensci.org/virtuoso/ (docs)
 BugReports: https://github.com/ropensci/virtuoso/issues
 Encoding: UTF-8
 LazyData: true
